[package]
name = "broadcast-terminal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
byte-slice-cast = "1.2.1"
derive_more = "0.99.17"
glib = "0.15.6"
gst = { package = "gstreamer", version = "0.18.5" }
gst-app = { package = "gstreamer-app", version = "0.18.0" }
gst-audio = { package = "gstreamer-audio", version = "0.18.5" }
gst-video = { package = "gstreamer-video", version = "0.18.5" }
iced = { git = "https://github.com/iced-rs/iced", rev = "ee6f4cb2ac7f322ef708fe0655835638bac841ea", features = ["image"] }
iced_native = { git = "https://github.com/iced-rs/iced", rev = "ee6f4cb2ac7f322ef708fe0655835638bac841ea" }
