[package]
name = "broadcast-terminal"
version = "0.1.0"
edition = "2021"

[features]
default = ["nativesrc"]
debug = []
nativesrc = []
testsrc = []

[dependencies]
anyhow = "1.0.55"
byte-slice-cast = "1.2.1"
derive_more = "0.99.17"
glib = "0.15.6"
gst = { package = "gstreamer", version = "0.18.5" }
gst-app = { package = "gstreamer-app", version = "0.18.0" }
gst-audio = { package = "gstreamer-audio", version = "0.18.5" }
gst-video = { package = "gstreamer-video", version = "0.18.5" }
iced = { git = "https://github.com/iced-rs/iced", rev = "a53fa91e0ddf374bbeb66d5e831b79127ed47a9d", features = ["image"] }
iced_native = { git = "https://github.com/iced-rs/iced", rev = "a53fa91e0ddf374bbeb66d5e831b79127ed47a9d" }
